# XAUUSD-auto-update-kaggle-dataset

./: .gitignore  README.md  pyproject.toml  requirements.txt  upload_xau_to_kaggle.py
